# diffguard

./: .gitignore  .pre-commit-hooks.yaml  .tmp_path_parent  ADR-0016-clone-from-fix.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  GEMINI.md  README.md  RELEASE-NOTES-v0.2.0.md  ROADMAP.md  SPEC-0016-clone-from-fix.md  action.yml  adr-001-rand-patch.md  adr-009-no-color-flag.md  adr-010-version-flag.md  adr-011-parse-blame-porcelain-result.md  adr-011-redundant-match-arm.md  adr-012-collect-blame-deleted-file-skip.md  adr-012-configfile-built_in-missing-panics-doc.md  adr-012-diff-builder-must-use.md  adr-012-diffs-stats-overflow-handling.md  adr-012-escape_md-duplication.md  adr-012-false-positive-fingerprint-set-must-use.md  adr-012-redundant-closures-in-diffguard-testkit.md  adr-012-redundant-match-arm-418.md  adr-012-redundant-match-arm-452.md  adr-013-rust-no-unwrap-rule-self-defeat.md  adr-025f59f52.md  adr-026-use-from-trait-for-u8-u32-lossless-casts-in-unescape.md  adr-0323-vestigial-clamps.md  adr-0328-uninlined-format-args.md  adr-0516-wildcard-imports-fixtures-specs.md  adr-0516-wildcard-imports-fixtures.md  adr-55866964.md  adr-564d12dd.md  adr-930e65ef.md  (+62 more)
bench/: Cargo.toml  fixtures.rs  lib.rs
bench/benches/: evaluation.rs  parsing.rs  preprocessing.rs  rendering.rs
bench/tests/: dependency_structure_tests.rs  edge_case_tests.rs  fixtures.rs  property_tests.rs  property_tests.rs.orig  snapshot_tests.rs
bench/tests/snapshots/: snapshot_tests__diffline_conversion.snap  snapshot_tests__generate_input_lines_5.snap  snapshot_tests__generate_input_lines_empty.snap  snapshot_tests__generate_mixed_unified_diff_10_lines.snap  snapshot_tests__generate_receipt_empty.snap  snapshot_tests__generate_unified_diff_single_line.snap  snapshot_tests__parse_unified_diff_small.snap  snapshot_tests__render_markdown_with_finding.snap  snapshot_tests__render_sarif_with_finding.snap  snapshot_tests__snapshot_generate_mixed_unified_diff_empty.snap
crates/diffguard/: CLAUDE.md  Cargo.toml  README.md  default_11217807944705195929_0_76940.profraw  default_11217807944705195929_0_89636.profraw
crates/diffguard-analytics/: Cargo.toml  README.md
crates/diffguard-analytics/src/: lib.rs
crates/diffguard-analytics/tests/: analytics_integration_tests.rs  clone_from_clippy_test.rs  clone_from_test.rs  doc_tests_work_933ae7ef.rs  edge_cases.rs  green_edge_tests_work_aca4fe6b.rs  green_functional_tests.md  integration_baseline_workflow.rs  integration_test.rs  integration_tests.rs  merge_clone_from_tests.rs  merge_false_positive_baselines_test.rs  must_use_attribute_test.rs  must_use_merge_test.rs  must_use_verification.rs  normalize_false_positive_baseline_edge_case_tests.rs  normalize_false_positive_baseline_refactor_tests.rs  prop_working.rs  properties.rs  properties_two.rs  property_test.rs  property_tests.rs  snapshot_test.rs  snapshot_tests.rs
crates/diffguard-app/: CLAUDE.md  Cargo.toml
crates/diffguard-app/src/: check.rs  csv.rs  fingerprint.rs  junit.rs  lib.rs  render.rs  sarif.rs  sensor.rs
crates/diffguard-app/tests/: properties.rs  snapshot_tests.rs
crates/diffguard-core/: CLAUDE.md  Cargo.toml  README.md
crates/diffguard-core/proptest-regressions/: check.txt  render.txt
crates/diffguard-core/src/: check.rs  checkstyle.rs  csv.rs  fingerprint.rs  gitlab_quality.rs  junit.rs  lib.rs  render.rs  sarif.rs  sensor.rs  sensor_api.rs  xml_utils.rs
crates/diffguard-core/tests/: adversarial_sarif_escape_test.rs  check_pipeline_refactor_test.rs  clippy_lint_tests.rs  edge_case_checkstyle.rs  edge_case_snapshot_tests.rs  escape_md_test.rs  escape_xml_control_chars.rs  escape_xml_proptest.proptest-regressions  escape_xml_proptest.rs  github_actions_sha_pinning_integration_test.rs  github_actions_sha_pinning_property_test.rs  gitlab_quality_doc_test.rs  green_tests_fingerprint_edge_cases.rs  green_tests_sensor_edge_cases.rs  green_tests_work_0bf57ad5_fuzz_corpus_seeds.rs  integration_fingerprint_pipeline.rs  integration_test_gitlab_quality.rs  integration_test_work_0bf57ad5_fuzz_corpus_seeds.rs  must_use_attributes_test.rs  properties.proptest-regressions  properties.rs  property_test_checkstyle.proptest-regressions  property_test_checkstyle.rs  property_test_junit.proptest-regressions  property_test_junit.rs  property_test_sensor.proptest-regressions  property_test_sensor.rs  property_tests_escape_xml.rs  property_tests_escape_xml_control_chars.rs  proptest_gitlab_quality.rs  red_tests_edge_case_snapshot_tests.rs  red_tests_sensor_must_use.rs  red_tests_work_0bf57ad5_fuzz_corpus_seeds.rs  red_tests_work_dcc10c76_check.rs  red_tests_xml_escape.rs  snapshot_tests.rs  test_checkstyle.rs  test_checkstyle_info_edge_cases.rs  test_checkstyle_info_severity.rs  test_gitlab_quality.rs  (+3 more)
crates/diffguard-diff/: CLAUDE.md  Cargo.toml  README.md
crates/diffguard-diff/src/: lib.rs  unified.rs
crates/diffguard-diff/tests/: clippy_cast_lossless_test.rs  edge_case_tracing_tests.rs  green_edge_tests_work_215ddb76.rs  green_edge_tests_work_cf4b77dd.rs  green_tests_work_095e24f2.rs  integration_octal_escaped_paths.rs  integration_tests.rs  must_use_attributes_test.rs  properties.proptest-regressions  properties.rs  red_tests_work_095e24f2.rs  red_tests_work_b7331fdb_must_use.rs  snapshot_tests.rs  test_overflow_green.rs  test_overflow_red.rs  unescape_git_path_lossless_cast_test.rs
crates/diffguard-domain/: CLAUDE.md  Cargo.toml  README.md
crates/diffguard-lsp/: Cargo.toml  README.md  build.rs
crates/diffguard-testkit/: CLAUDE.md  Cargo.toml  README.md
crates/diffguard-types/: CLAUDE.md  Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: baseline_receipt.rs  config_parser.rs  error_chain.rs  evaluate_lines.rs  glob_pattern.rs  markdown_escape.rs  override_matcher.rs  preprocess.rs  regex_pattern.rs  rule_matcher.rs  sarif_renderer.rs  unified_diff_parser.rs
xtask/: Cargo.toml  README.md
xtask/src/: conform.rs  conform_real.rs  main.rs
xtask/tests/: clippy_map_unwrap_or_test.rs  red_tests.rs  uninlined_format_args_test.rs
(+1351 files in other folders)
