[workspace]
resolver = "2"
members = [
  "crates/diffguard",
  "crates/diffguard-app",
  "crates/diffguard-diff",
  "crates/diffguard-domain",
  "crates/diffguard-testkit",
  "crates/diffguard-types",
  "xtask",
]

default-members = ["crates/diffguard"]

[workspace.package]
version = "0.1.0"
authors = ["Effortless Metrics <contact@effortlessmetrics.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.75"
description = "Diff-scoped governance linter for PR automation"
repository = "https://github.com/effortless-mgmt/diffguard"
homepage = "https://github.com/effortless-mgmt/diffguard"
documentation = "https://docs.rs/diffguard"
keywords = ["linter", "diff", "git", "ci", "governance"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.8", features = ["derive"] }
regex = "1.10"
globset = "0.4"
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
assert_cmd = "2.0"
insta = { version = "1.39", features = ["json"] }
tempfile = "3.10"
proptest = "1.4"
