[workspace]
resolver = "2"
members = [
  "crates/diffguard",
  "crates/diffguard-core",
  "crates/diffguard-diff",
  "crates/diffguard-domain",
  "crates/diffguard-testkit",
  "crates/diffguard-types",
  "xtask",
]

default-members = ["crates/diffguard"]

[workspace.package]
version = "0.2.0"
authors = ["Steven Zimmerman, CPA <git@effortlesssteven.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.92"
description = "Diff-scoped governance linter for PR automation"
repository = "https://github.com/effortlessmetrics/diffguard"
homepage = "https://github.com/effortlessmetrics/diffguard"
documentation = "https://docs.rs/diffguard"
keywords = ["linter", "diff", "git", "ci", "governance"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0.101"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
schemars = { version = "1.2.1", features = ["derive"] }
regex = "1.12.3"
globset = "0.4.18"
toml = "0.9.8"
clap = { version = "4.5.57", features = ["derive"] }
assert_cmd = "2.1.2"
insta = { version = "1.46.3", features = ["json"] }
tempfile = "3.25.0"
proptest = "1.10.0"
