[package]
name = "diffguard-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

# Exclude from parent workspace (required for cargo-fuzz)
[workspace]

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
toml = "0.8"

diffguard-diff = { path = "../crates/diffguard-diff" }
diffguard-domain = { path = "../crates/diffguard-domain" }
diffguard-types = { path = "../crates/diffguard-types" }

[[bin]]
name = "unified_diff_parser"
path = "fuzz_targets/unified_diff_parser.rs"
test = false
doc = false

[[bin]]
name = "preprocess"
path = "fuzz_targets/preprocess.rs"
test = false
doc = false

[[bin]]
name = "rule_matcher"
path = "fuzz_targets/rule_matcher.rs"
test = false
doc = false

[[bin]]
name = "config_parser"
path = "fuzz_targets/config_parser.rs"
test = false
doc = false

[[bin]]
name = "regex_pattern"
path = "fuzz_targets/regex_pattern.rs"
test = false
doc = false

[[bin]]
name = "glob_pattern"
path = "fuzz_targets/glob_pattern.rs"
test = false
doc = false
