[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
schemars.workspace = true

diffguard-types = { path = "../crates/diffguard-types" }

