[package]
name = "diffguard-app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Application layer for diffguard governance linter"
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
globset.workspace = true

# local crates

diffguard-types = { path = "../diffguard-types" }
diffguard-diff = { path = "../diffguard-diff" }
diffguard-domain = { path = "../diffguard-domain" }

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
