[package]
name = "diffguard-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core engine for diffguard governance linter"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/diffguard-core"
keywords.workspace = true
categories.workspace = true
readme = "README.md"
include = [
  "src/**",
  "Cargo.toml",
  "README.md",
  "CLAUDE.md",
  "../../LICENSE-*",
]
exclude = [
  "**/*.snap.new",
  "**/target/**",
  "**/artifacts/**",
  "**/fuzz/**",
]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
globset.workspace = true
sha2 = "0.10"
hex = "0.4"

# local crates

diffguard-types = { version = "0.2", path = "../diffguard-types" }
diffguard-diff = { version = "0.2", path = "../diffguard-diff" }
diffguard-domain = { version = "0.2", path = "../diffguard-domain" }

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
