[package]
name = "diffguard-diff"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Unified diff parser for diffguard"
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true

diffguard-types = { path = "../diffguard-types" }

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
