[package]
name = "diffguard-domain"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Rule evaluation and preprocessing for diffguard"
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
regex.workspace = true
globset.workspace = true

diffguard-types = { path = "../diffguard-types" }

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
