[package]
name = "diffguard-domain"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Rule evaluation and preprocessing for diffguard"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/diffguard-domain"
keywords.workspace = true
categories.workspace = true
readme = "README.md"
include = [
  "src/**",
  "Cargo.toml",
  "README.md",
  "CLAUDE.md",
  "../../LICENSE-*",
]
exclude = [
  "**/*.snap.new",
  "**/target/**",
  "**/artifacts/**",
  "**/fuzz/**",
]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
regex.workspace = true
globset.workspace = true

diffguard-types = { version = "0.2", path = "../diffguard-types" }

[dev-dependencies]
insta.workspace = true
proptest.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(mutants)'] }
