[package]
name = "diffguard-testkit"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false
description = "Shared test utilities for diffguard workspace"

[dependencies]
proptest.workspace = true
serde_json.workspace = true
jsonschema = "0.18"
regex.workspace = true
globset.workspace = true

# Workspace crates for type access
diffguard-types = { path = "../diffguard-types" }
diffguard-diff = { path = "../diffguard-diff" }
diffguard-domain = { path = "../diffguard-domain" }

[dev-dependencies]
# For testing the testkit itself
