[package]
name = "diffguard-testkit"
version.workspace = true
description = "Shared test utilities for diffguard workspace"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
proptest.workspace = true
serde_json.workspace = true
jsonschema = "0.18"
regex.workspace = true
globset.workspace = true

# Workspace crates for type access
diffguard-types = { path = "../diffguard-types" }
diffguard-diff = { path = "../diffguard-diff" }
diffguard-domain = { path = "../diffguard-domain" }

[dev-dependencies]
# For testing the testkit itself
