[package]
name = "diffguard-types"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core types for diffguard governance linter"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/diffguard-types"
keywords.workspace = true
categories.workspace = true
readme = "README.md"
include = [
  "src/**",
  "Cargo.toml",
  "README.md",
  "CLAUDE.md",
  "../../LICENSE-*",
]
exclude = [
  "**/*.snap.new",
  "**/target/**",
  "**/artifacts/**",
  "**/fuzz/**",
]

[dependencies]
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true

[dev-dependencies]
proptest.workspace = true
jsonschema = "0.18"
toml.workspace = true
