[package]
name = "diffguard"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
include = [
  "src/**",
  "Cargo.toml",
  "README.md",
  "CLAUDE.md",
  "../../README.md",
  "../../CLAUDE.md",
  "../../LICENSE-*",
  "../../CHANGELOG.md",
  "../../diffguard.toml.example",
  "../../docs/**",
  "../../schemas/**",
  "../../.kiro/specs/**",
]
exclude = [
  "**/*.snap.new",
  "**/target/**",
  "**/artifacts/**",
  "**/fuzz/corpus/**",
  "**/fuzz/artifacts/**",
]

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# local

diffguard-types = { version = "0.1", path = "../diffguard-types" }
diffguard-app = { version = "0.1", path = "../diffguard-app" }

[dev-dependencies]
assert_cmd.workspace = true
serde_json.workspace = true
tempfile.workspace = true
