[package]
name = "diffguard"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
include = [
  "src/**",
  "Cargo.toml",
  "README.md",
  "CLAUDE.md",
  "../../README.md",
  "../../CLAUDE.md",
  "../../LICENSE-*",
  "../../CHANGELOG.md",
  "../../diffguard.toml.example",
  "../../docs/**",
  "../../schemas/**",
  "../../.kiro/specs/**",
]
exclude = [
  "**/*.snap.new",
  "**/target/**",
  "**/artifacts/**",
  "**/fuzz/corpus/**",
  "**/fuzz/artifacts/**",
]

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex.workspace = true
globset.workspace = true

# local

diffguard-types = { version = "0.1", path = "../diffguard-types" }
diffguard-core = { version = "0.1", path = "../diffguard-core" }
diffguard-domain = { version = "0.1", path = "../diffguard-domain" }

[dev-dependencies]
assert_cmd.workspace = true
serde_json.workspace = true
tempfile.workspace = true
